--- a/src/app/comun/crear-heroe/crear-heroe.component.html
+++ b/src/app/comun/crear-heroe/crear-heroe.component.html
@@ -5,81 +5,87 @@
 
 <div class= "contenedor borde1">
 
-	<h1 class="title Texto1">Crear Heroe</h1>
+  <h1 class="title Texto1">Crear Heroe</h1>
 
-	<hr class="divisor"/>
+  <hr class="divisor"/>
 
-	<div class="contenedorClases">
-		
-		<!-- Emblema Guerrero -->
-		<div class="clase Texto2" [ngClass]="{'animacionFocus': claseSeleccionada=='Guerrero'}" (click)="seleccionarClase('Guerrero')">
-			<img src="../../../assets/Emblemas/1.png">
-		</div>
+  <div class="contenedorClases">
 
-		<!-- Emblema Hechicero -->
-		<div class="clase Texto2" [ngClass]="{'animacionFocus': claseSeleccionada=='Hechicero'}" (click)="seleccionarClase('Hechicero')">
-			<img src="../../../assets/Emblemas/2.png">
-		</div>
+    <!-- Emblema Guerrero -->
+    <div class="clase Texto2" [ngClass]="{'animacionFocus': claseSeleccionada=='Guerrero'}" (click)="seleccionarClase('Guerrero')">
+      <img src="../../../assets/Emblemas/1.png">
+    </div>
 
-		<!-- Emblema Cazador -->
-		<div class="clase Texto2" [ngClass]="{'animacionFocus': claseSeleccionada=='Cazador'}" (click)="seleccionarClase('Cazador')">
-			<img src="../../../assets/Emblemas/3.png">
-		</div>
+    <!-- Emblema Hechicero -->
+    <div class="clase Texto2" [ngClass]="{'animacionFocus': claseSeleccionada=='Hechicero'}" (click)="seleccionarClase('Hechicero')">
+      <img src="../../../assets/Emblemas/2.png">
+    </div>
 
-		<!-- Emblema Sacerdote -->
-		<div class="clase Texto2" [ngClass]="{'animacionFocus': claseSeleccionada=='Sacerdote'}" (click)="seleccionarClase('Sacerdote')">
-			<img src="../../../assets/Emblemas/4.png">
-		</div>
+    <!-- Emblema Cazador -->
+    <div class="clase Texto2" [ngClass]="{'animacionFocus': claseSeleccionada=='Cazador'}" (click)="seleccionarClase('Cazador')">
+      <img src="../../../assets/Emblemas/3.png">
+    </div>
 
-		<!-- Emblema Picaro -->
-		<div class="clase Texto2" [ngClass]="{'animacionFocus': claseSeleccionada=='Ladrón'}" (click)="seleccionarClase('Ladrón')">
-			<img src="../../../assets/Emblemas/5.png">
-		</div>
+    <!-- Emblema Sacerdote -->
+    <div class="clase Texto2" [ngClass]="{'animacionFocus': claseSeleccionada=='Sacerdote'}" (click)="seleccionarClase('Sacerdote')">
+      <img src="../../../assets/Emblemas/4.png">
+    </div>
 
-	</div>
+    <!-- Emblema Picaro -->
+    <div class="clase Texto2" [ngClass]="{'animacionFocus': claseSeleccionada=='Ladrón'}" (click)="seleccionarClase('Ladrón')">
+      <img src="../../../assets/Emblemas/5.png">
+    </div>
 
-	<hr class="divisor"/>
+  </div>
 
-	<div class="contenedorHeroe">
+  <hr class="divisor"/>
 
-		<div class="contenedorGenero">
+  <div class="contenedorHeroe">
 
-            <div class="contenedorImagenHeroe">
-			    <img class="imagenHeroe" src="../../../assets/Personajes/heroes/{{imagenId}}.png">
-            </div>
+    <div class="contenedorGenero">
 
-			<div class="contenedorBotonesGenero">
-				<div class="botonGenero masculino animacionFocus" [ngClass]="{'animacionFocus': generoSeleccionado=='masculino'}"><div class="botonInteriorGenero" (click)="seleccionarGenero('masculino')"></div></div>
-				<div class="botonGenero femenino" [ngClass]="{'animacionFocus': generoSeleccionado=='femenino'}" (click)="seleccionarGenero('femenino')"><div class="botonInteriorGenero" (click)="seleccionarGenero('femenino')"></div></div>
-			</div>
+      <div class="contenedorImagenHeroe">
+        <img class="imagenHeroe" src="../../../assets/Personajes/heroes/{{imagenId}}.png">
+      </div>
 
-			<div class="contenedorFormularioNombre">
-                
-                <input matInput [formControl]="nombre" class="formularioTexto Texto2" type="text"/>
+      <div class="contenedorBotonesGenero">
+        <div class="botonGenero masculino animacionFocus" [ngClass]="{'animacionFocus': generoSeleccionado=='masculino'}"><div class="botonInteriorGenero" (click)="seleccionarGenero('masculino')"></div></div>
+        <div class="botonGenero femenino" [ngClass]="{'animacionFocus': generoSeleccionado=='femenino'}" (click)="seleccionarGenero('femenino')"><div class="botonInteriorGenero" (click)="seleccionarGenero('femenino')"></div></div>
+      </div>
 
-			</div>
-				
-		</div>
+      <div class="contenedorFormularioNombre">
 
-		<div class="contenedorDescripcion">
+        <input matInput [formControl]="nombre" class="formularioTexto Texto2" type="text"/>
 
-            <div class="tituloClase Texto1">{{claseSeleccionada}}</div>
-            <div class="descripcionClase Texto2 Arial">{{descripcion}}</div>
+      </div>
 
-			<div class="tituloRoles Texto1">Roles</div>
-			<div class="contenedorRoles">
-				<img class="iconoRol" *ngIf="tank" src="../../../assets/Iconos/Rol-Tank.png">		
-				<img class="iconoRol" *ngIf="heal" src="../../../assets/Iconos/Rol-Heal.png">		
-				<img class="iconoRol" *ngIf="dps" src="../../../assets/Iconos/Rol-DPS.png">		
-			</div>
+    </div>
 
-			<div class="contenedorBotones">
-				<botonComponent mat-button (click)="crearPersonaje()" [tipoBoton]="2" [texto]="'Crear Heroe'" [color]="'verde'" class="boton"></botonComponent>
-				<botonComponent mat-button [mat-dialog-close] [tipoBoton]="2" [texto]="'Cancelar'" [color]="'rojo'" class="boton"></botonComponent>
-			</div>
-		</div>
+    <div class="contenedorDescripcion">
 
-	</div>
+      <div class="tituloClase Texto1">{{claseSeleccionada}}</div>
+      <div class="descripcionClase Texto2 Arial">{{descripcion}}</div>
+
+      <div class="tituloRoles Texto1">Roles</div>
+      <div class="contenedorRoles">
+        @if (tank) {
+          <img class="iconoRol" src="../../../assets/Iconos/Rol-Tank.png">
+        }
+        @if (heal) {
+          <img class="iconoRol" src="../../../assets/Iconos/Rol-Heal.png">
+        }
+        @if (dps) {
+          <img class="iconoRol" src="../../../assets/Iconos/Rol-DPS.png">
+        }
+      </div>
+
+      <div class="contenedorBotones">
+        <botonComponent mat-button (click)="crearPersonaje()" [tipoBoton]="2" [texto]="'Crear Heroe'" [color]="'verde'" class="boton"></botonComponent>
+        <botonComponent mat-button [mat-dialog-close] [tipoBoton]="2" [texto]="'Cancelar'" [color]="'rojo'" class="boton"></botonComponent>
+      </div>
+    </div>
+
+  </div>
 
 </div>
 
