--- a/src/app/comun/desarrollador/formMisionesComponent/formMisiones.component.html
+++ b/src/app/comun/desarrollador/formMisionesComponent/formMisiones.component.html
@@ -4,143 +4,145 @@
 <!--         Form Misiones       -->
 <!--   ******************* -->
 
-    <!-- LISTA Misiones -->
-    <panelSelectorComponent 
-            [tipo]="'Misiones'"
-            [datos]="this.desarrolladorService.misiones.misiones"
-            [titulo]="'Misiones'"
-            [botonAdd]="true"
-            [lateral]="'izquierda'"
-            [botonEliminarRelacion]="false"
-            (addElementoEmitter)="addMision()"
-            (selector)="seleccionarMision($event)"
-            >
-    </panelSelectorComponent>
+<!-- LISTA Misiones -->
+<panelSelectorComponent
+  [tipo]="'Misiones'"
+  [datos]="this.desarrolladorService.misiones.misiones"
+  [titulo]="'Misiones'"
+  [botonAdd]="true"
+  [lateral]="'izquierda'"
+  [botonEliminarRelacion]="false"
+  (addElementoEmitter)="addMision()"
+  (selector)="seleccionarMision($event)"
+  >
+</panelSelectorComponent>
 
-    <!-- LISTA Objetivos -->
-    <panelSelectorComponent *ngIf="opcionSeleccionada=='Objetivos'" 
-            [tipo]="'Objetivos'"
-            [datos]="this.desarrolladorService.misiones.misiones[this.desarrolladorService.misionSeleccionadaIndex].objetivos"
-            [titulo]="'Objetivos'"
-            [botonAdd]="true"
-            [lateral]="'derecha'"
-            [botonEliminarRelacion]="false"
-            >
-    </panelSelectorComponent>
+<!-- LISTA Objetivos -->
+@if (opcionSeleccionada=='Objetivos') {
+  <panelSelectorComponent
+    [tipo]="'Objetivos'"
+    [datos]="this.desarrolladorService.misiones.misiones[this.desarrolladorService.misionSeleccionadaIndex].objetivos"
+    [titulo]="'Objetivos'"
+    [botonAdd]="true"
+    [lateral]="'derecha'"
+    [botonEliminarRelacion]="false"
+    >
+  </panelSelectorComponent>
+}
 
-        <!-- CENTRAL DATOS ENEMIGOS -->
-        <div id="visualizador">
+<!-- CENTRAL DATOS ENEMIGOS -->
+<div id="visualizador">
 
-            <div class="contenedorImagen">
-                <img class="imagen" src="./assets/desarrollador/mision.png"/>
-            </div>
+  <div class="contenedorImagen">
+    <img class="imagen" src="./assets/desarrollador/mision.png"/>
+  </div>
 
-			<form  id="formularioGeneral" [formGroup]="formMision">
-				  <mat-form-field  class="formId">
-					<mat-label>ID</mat-label>
-                    <input matInput disabled value="{{id_Mision.value}}">
-				  </mat-form-field>
+  <form  id="formularioGeneral" [formGroup]="formMision">
+    <mat-form-field  class="formId">
+      <mat-label>ID</mat-label>
+      <input matInput disabled value="{{id_Mision.value}}">
+    </mat-form-field>
 
-				  <mat-form-field class="formNombre">
-					<mat-label>Titulo Misión</mat-label>
-					<input matInput formControlName="titulo">
-				  </mat-form-field>
+    <mat-form-field class="formNombre">
+      <mat-label>Titulo Misión</mat-label>
+      <input matInput formControlName="titulo">
+    </mat-form-field>
 
-				  <mat-form-field class="formDescripcion">
-					<mat-label>Descripción</mat-label>
-					<input matInput formControlName="descripcion">
-				  </mat-form-field>
+    <mat-form-field class="formDescripcion">
+      <mat-label>Descripción</mat-label>
+      <input matInput formControlName="descripcion">
+    </mat-form-field>
 
-                    <div class="selector formTipoArmadura">
-                      <mat-form-field>
-                        <mat-label>Tipo</mat-label>
-                        <mat-select formControlName="tipo">
-                            <mat-option value="Principal">Principal</mat-option>
-                            <mat-option value="Secundaria">Secundaria</mat-option>
-                        </mat-select>
-                      </mat-form-field>
-                    </div>
-			</form>
+    <div class="selector formTipoArmadura">
+      <mat-form-field>
+        <mat-label>Tipo</mat-label>
+        <mat-select formControlName="tipo">
+          <mat-option value="Principal">Principal</mat-option>
+          <mat-option value="Secundaria">Secundaria</mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+  </form>
 
-            <div id="contenedorInferior">
+  <div id="contenedorInferior">
 
-                <div class="selector selectorTalento">
-                    <div class="opcion" (click)="seleccionarOpcion('Propiedades')" [ngClass]="selectorOpcion[0]">Propiedades</div>
-                    <div class="opcion" (click)="seleccionarOpcion('Objetivos')" [ngClass]="selectorOpcion[1]">Objetivos</div>
-                    <div class="opcion" (click)="seleccionarOpcion('Recompensas')" [ngClass]="selectorOpcion[2]">Recompensas</div>
-                </div>
+    <div class="selector selectorTalento">
+      <div class="opcion" (click)="seleccionarOpcion('Propiedades')" [ngClass]="selectorOpcion[0]">Propiedades</div>
+      <div class="opcion" (click)="seleccionarOpcion('Objetivos')" [ngClass]="selectorOpcion[1]">Objetivos</div>
+      <div class="opcion" (click)="seleccionarOpcion('Recompensas')" [ngClass]="selectorOpcion[2]">Recompensas</div>
+    </div>
 
-                <ng-container *ngIf="opcionSeleccionada=='Propiedades'">
-                <div class="tituloSeccion">Propiedades</div>
-                <form  id="formularioEstadisticas" [formGroup]="formPropiedades">
-                      <mat-form-field  class="campo">
-                        <mat-label>Nivel Recomendado</mat-label>
-                        <input matInput type="number" min="1" formControlName="nivel_recomendado">
-                      </mat-form-field>
-                      <mat-form-field  class="campo">
-                        <mat-label>Capítulo</mat-label>
-                        <input matInput type="number" min="1" formControlName="capitulo">
-                      </mat-form-field>
-                      <mat-form-field  class="campo">
-                        <mat-label>Epígrafe</mat-label>
-                        <input matInput type="number" min="0" formControlName="epigrafe">
-                      </mat-form-field>
-                </form>
-                </ng-container>
+    @if (opcionSeleccionada=='Propiedades') {
+      <div class="tituloSeccion">Propiedades</div>
+      <form  id="formularioEstadisticas" [formGroup]="formPropiedades">
+        <mat-form-field  class="campo">
+          <mat-label>Nivel Recomendado</mat-label>
+          <input matInput type="number" min="1" formControlName="nivel_recomendado">
+        </mat-form-field>
+        <mat-form-field  class="campo">
+          <mat-label>Capítulo</mat-label>
+          <input matInput type="number" min="1" formControlName="capitulo">
+        </mat-form-field>
+        <mat-form-field  class="campo">
+          <mat-label>Epígrafe</mat-label>
+          <input matInput type="number" min="0" formControlName="epigrafe">
+        </mat-form-field>
+      </form>
+    }
 
-                <ng-container *ngIf="opcionSeleccionada=='Objetivos'">
-                <div class="tituloSeccion">Objetivos</div>
-                <form  id="formularioEstadisticas" [formGroup]="formObjetivos">
-                      <mat-form-field  class="campo">
-                        <mat-label>ID</mat-label>
-                        <input matInput disabled type="number" min="0" formControlName="id">
-                      </mat-form-field>
-                      <mat-form-field  class="campo">
-                        <mat-label>Texto</mat-label>
-                        <input matInput formControlName="texto">
-                      </mat-form-field>
-                    <div class="selector campo">
-                      <mat-form-field>
-                        <mat-label>Tipo</mat-label>
-                        <mat-select formControlName="tipo">
-                            <mat-option value="Cuenta">Cuenta</mat-option>
-                            <mat-option value="Booleano">Booleano</mat-option>
-                        </mat-select>
-                      </mat-form-field>
-                    </div>
-                      <mat-form-field  class="campo">
-                        <mat-label>Cuenta Max</mat-label>
-                        <input matInput type="number" min="0" formControlName="cuentaMax">
-                      </mat-form-field>
-                    <div class="campoCheckBox">
-                        <mat-checkbox  formControlName="requerido">Requerido</mat-checkbox>
-                    </div>
-                </form>
-                </ng-container>
-
-                <ng-container *ngIf="opcionSeleccionada=='Recompensas'">
-                <div class="tituloSeccion">Recompensas</div>
-                <form  id="formularioRecompensas" [formGroup]="formRecompensas">
-                      <mat-form-field  class="campo">
-                        <mat-label>ORO</mat-label>
-                        <input matInput disabled type="number" min="0" formControlName="oro">
-                      </mat-form-field>
-                      <mat-form-field  class="campo">
-                        <mat-label>EXP</mat-label>
-                        <input matInput disabled type="number" min="0" formControlName="exp">
-                      </mat-form-field>
-                      <mat-form-field  class="campo">
-                        <mat-label>ORO Repeticion Mod</mat-label>
-                        <input matInput disabled type="number" min="0" formControlName="oro_repeticion_mod">
-                      </mat-form-field>
-                      <mat-form-field  class="campo">
-                        <mat-label>EXP Repeticion Mod</mat-label>
-                        <input matInput disabled type="number" min="0" formControlName="exp_repeticion_mod">
-                      </mat-form-field>
-                </form>
-                </ng-container>
-
-            </div> <!-- Fin Contenedor Inferior -->
-
-
+    @if (opcionSeleccionada=='Objetivos') {
+      <div class="tituloSeccion">Objetivos</div>
+      <form  id="formularioEstadisticas" [formGroup]="formObjetivos">
+        <mat-form-field  class="campo">
+          <mat-label>ID</mat-label>
+          <input matInput disabled type="number" min="0" formControlName="id">
+        </mat-form-field>
+        <mat-form-field  class="campo">
+          <mat-label>Texto</mat-label>
+          <input matInput formControlName="texto">
+        </mat-form-field>
+        <div class="selector campo">
+          <mat-form-field>
+            <mat-label>Tipo</mat-label>
+            <mat-select formControlName="tipo">
+              <mat-option value="Cuenta">Cuenta</mat-option>
+              <mat-option value="Booleano">Booleano</mat-option>
+            </mat-select>
+          </mat-form-field>
         </div>
+        <mat-form-field  class="campo">
+          <mat-label>Cuenta Max</mat-label>
+          <input matInput type="number" min="0" formControlName="cuentaMax">
+        </mat-form-field>
+        <div class="campoCheckBox">
+          <mat-checkbox  formControlName="requerido">Requerido</mat-checkbox>
+        </div>
+      </form>
+    }
+
+    @if (opcionSeleccionada=='Recompensas') {
+      <div class="tituloSeccion">Recompensas</div>
+      <form  id="formularioRecompensas" [formGroup]="formRecompensas">
+        <mat-form-field  class="campo">
+          <mat-label>ORO</mat-label>
+          <input matInput disabled type="number" min="0" formControlName="oro">
+        </mat-form-field>
+        <mat-form-field  class="campo">
+          <mat-label>EXP</mat-label>
+          <input matInput disabled type="number" min="0" formControlName="exp">
+        </mat-form-field>
+        <mat-form-field  class="campo">
+          <mat-label>ORO Repeticion Mod</mat-label>
+          <input matInput disabled type="number" min="0" formControlName="oro_repeticion_mod">
+        </mat-form-field>
+        <mat-form-field  class="campo">
+          <mat-label>EXP Repeticion Mod</mat-label>
+          <input matInput disabled type="number" min="0" formControlName="exp_repeticion_mod">
+        </mat-form-field>
+      </form>
+    }
+
+  </div> <!-- Fin Contenedor Inferior -->
+
+
+</div>
