--- a/src/app/comun/enemigo/enemigo.component.html
+++ b/src/app/comun/enemigo/enemigo.component.html
@@ -5,47 +5,48 @@
 
 <div class="contenedorEnemigo" [ngClass]="renderizarMarcoEnemigo()">
 
-	<div class="contenedorImagen" (click)="toggleDesplegable()">
-		<div class="frameImagen"></div>
-		<img class="imagenEnemigo" src="../../../assets/Enemigos/{{renderEnemigo.familia}}/{{renderEnemigo.imagen_id}}.png">
+  <div class="contenedorImagen" (click)="toggleDesplegable()">
+    <div class="frameImagen"></div>
+    <img class="imagenEnemigo" src="../../../assets/Enemigos/{{renderEnemigo.familia}}/{{renderEnemigo.imagen_id}}.png">
     <div class="marcaColor" [ngStyle]="{'background': renderEnemigo.color}"></div>
 
-        <appAnimacionEfecto #animacionEfecto [loop]="false" [animacion]="renderEnemigo.animacion" [mostrarAnimacion]="renderEnemigo.mostrarAnimacion"></appAnimacionEfecto>
+    <appAnimacionEfecto #animacionEfecto [loop]="false" [animacion]="renderEnemigo.animacion" [mostrarAnimacion]="renderEnemigo.mostrarAnimacion"></appAnimacionEfecto>
 
-        <appAnimacionNumero id="animacionNumero" #animacionNumero [enemigo]="renderEnemigo" [enemigoVida]="renderEnemigo.puntosVida" [enemigoIndex]="indexEnemigo"></appAnimacionNumero>
+    <appAnimacionNumero id="animacionNumero" #animacionNumero [enemigo]="renderEnemigo" [enemigoVida]="renderEnemigo.puntosVida" [enemigoIndex]="indexEnemigo"></appAnimacionNumero>
 
-	</div>
+  </div>
 
-    <div *ngIf="tipoDesplegable == 'horizontal'" id="wrapperDesplegableHorizontal">
-
-        <div class="contenedorDetalle" [ngClass]="{'desplegado': estadoDesplegado}">
-            <div class="frameDetalle"></div>
-            <div class="nombreEnemigo Texto4">{{renderEnemigo.nombre}}</div>
-
-            <barraComponent [badge]="false" [tipo]="'Vida'" [valor]="renderEnemigo.vida" [escudo]="renderEnemigo.escudo" class="barra"></barraComponent>
-
-            <div class="Buffos-DeBuffos-Enemigo">
-                <div *ngFor="let buff of renderEnemigo.buff; let j = index"  class="contenedorBuffo">
-                    <div class="contadorDuracion">{{renderEnemigo.buff[j].duracion}}</div>
-                    <div [ngStyle]="renderizarEstiloBuffosEnemigos(renderEnemigo.buff[j])" [ngClass]="renderizarClaseBuffosEnemigos(j)" ></div>
-                </div>
-            </div>
-        </div>
-
-    </div>
-
-
-    <div *ngIf="tipoDesplegable == 'vertical' && desplegadoDefecto == true" id="wrapperDesplegableVertical">
-
-        <barraComponent [badge]="false" [orientacion]="'vertical'" [tipo]="'Vida'" [valor]="renderEnemigo.vida" [escudo]="renderEnemigo.escudo" class="barra"></barraComponent>
-
+  @if (tipoDesplegable == 'horizontal') {
+    <div id="wrapperDesplegableHorizontal">
+      <div class="contenedorDetalle" [ngClass]="{'desplegado': estadoDesplegado}">
+        <div class="frameDetalle"></div>
+        <div class="nombreEnemigo Texto4">{{renderEnemigo.nombre}}</div>
+        <barraComponent [badge]="false" [tipo]="'Vida'" [valor]="renderEnemigo.vida" [escudo]="renderEnemigo.escudo" class="barra"></barraComponent>
         <div class="Buffos-DeBuffos-Enemigo">
-            <div *ngFor="let buff of renderEnemigo.buff; let j = index"  class="contenedorBuffo">
-                <div [ngStyle]="renderizarEstiloBuffosEnemigos(renderEnemigo.buff[j])" [ngClass]="renderizarClaseBuffosEnemigos(j)" ></div>
+          @for (buff of renderEnemigo.buff; track buff; let j = $index) {
+            <div  class="contenedorBuffo">
+              <div class="contadorDuracion">{{renderEnemigo.buff[j].duracion}}</div>
+              <div [ngStyle]="renderizarEstiloBuffosEnemigos(renderEnemigo.buff[j])" [ngClass]="renderizarClaseBuffosEnemigos(j)" ></div>
             </div>
+          }
         </div>
-
+      </div>
     </div>
+  }
+
+
+  @if (tipoDesplegable == 'vertical' && desplegadoDefecto == true) {
+    <div id="wrapperDesplegableVertical">
+      <barraComponent [badge]="false" [orientacion]="'vertical'" [tipo]="'Vida'" [valor]="renderEnemigo.vida" [escudo]="renderEnemigo.escudo" class="barra"></barraComponent>
+      <div class="Buffos-DeBuffos-Enemigo">
+        @for (buff of renderEnemigo.buff; track buff; let j = $index) {
+          <div  class="contenedorBuffo">
+            <div [ngStyle]="renderizarEstiloBuffosEnemigos(renderEnemigo.buff[j])" [ngClass]="renderizarClaseBuffosEnemigos(j)" ></div>
+          </div>
+        }
+      </div>
+    </div>
+  }
 
 
 </div>
