--- a/src/app/comun/eventos/eventos.component.html
+++ b/src/app/comun/eventos/eventos.component.html
@@ -1,19 +1,21 @@
 
 
-<div *ngIf="eventosService.mostrarEvento"  class="contenedorEventos">
-
-	<!--***********************************
-			Evento Tipo - Dialogo
-		*********************************** -->
-
-	<div *ngIf="eventosService.codigo==1" class="contenedorEventoDialogo">
-		<img class="imagenDialogo1" src="./assets/Personajes/{{eventosService.personaje1}}.png">
-		<img class="imagenDialogo2" src="./assets/Personajes/{{eventosService.personaje2}}.png">
-
-		<div class="contenedorDialogo" *ngFor="let dialogo of eventosService.dialogo; let i = index">
-			<ul class="nombreInterlocutor">{{dialogo.nombreInterlocutor}}</ul>
-			<ul class="dialogoInterlocutor">{{dialogo.dialogoInterlocutor}}</ul>
-		</div>
-	</div>
-
-</div>
+@if (eventosService.mostrarEvento) {
+  <div  class="contenedorEventos">
+    <!--***********************************
+    Evento Tipo - Dialogo
+    *********************************** -->
+    @if (eventosService.codigo==1) {
+      <div class="contenedorEventoDialogo">
+        <img class="imagenDialogo1" src="./assets/Personajes/{{eventosService.personaje1}}.png">
+        <img class="imagenDialogo2" src="./assets/Personajes/{{eventosService.personaje2}}.png">
+        @for (dialogo of eventosService.dialogo; track dialogo; let i = $index) {
+          <div class="contenedorDialogo">
+            <ul class="nombreInterlocutor">{{dialogo.nombreInterlocutor}}</ul>
+            <ul class="dialogoInterlocutor">{{dialogo.dialogoInterlocutor}}</ul>
+          </div>
+        }
+      </div>
+    }
+  </div>
+}
