--- a/src/app/comun/social/social.component.sass
+++ b/src/app/comun/social/social.component.sass
@@ -6,24 +6,17 @@
     background-color: rgba(black, 0.4)
 
 ::ng-deep .contenedorSocial
+  width: 80vw
+  height: 90vh
   display: flex
   justify-content: center
   align-items: center
-
-  .mat-dialog-container
-    position: absolute !important
-    width: 50%
-    height: 20%
-    min-width: 80vw
-    min-height: 95vh
-    color: $colorTexto
-    padding: 0
-    overflow: initial
 
   .contenedor
     position: absolute
     width: 100%
     height: 100%
+    overflow: hidden
     color: $colorTexto
     background-color: $colorFondo2
 
@@ -75,8 +68,8 @@
     .contenedorOpciones
         position: relative
         width: 80%
-        height: 65%
-        margin: 0 10%
+        height: 60%
+        margin: 2% 10%
         z-index: 10
         background-color: rgba(black,0.3)
 
@@ -84,7 +77,6 @@
             position: relative
             width: 100%
             height: 100%
-            padding: 3% 0
 
             .amigo
                 position: relative
@@ -122,7 +114,7 @@
 
                     .botonInvitar
                         width: 100%
-                        height: 100% 
+                        height: 100%
                         text-align: center
 
                 .botonEliminar
