--- a/src/app/comun/atributo/atributo.component.html
+++ b/src/app/comun/atributo/atributo.component.html
@@ -4,19 +4,45 @@
 <!--   ******************* -->
 
 <div class="contenedorAtributo">
-    <div class="valor Texto1">{{valor}}</div>
-    <img *ngIf="tipo=='movimiento'" class="icono" src="./assets/Iconos/Icono-Movimiento.png"/>
-    <img *ngIf="tipo=='energia'" class="icono" src="./assets/Iconos/Icono-Energia-Stat.png"/>
-    <img *ngIf="tipo=='ap'" class="icono" src="./assets/Iconos/Icono-Dano-Magico.png"/>
-    <img *ngIf="tipo=='ad'" class="icono" src="./assets/Iconos/Icono-Dano-Fisico.png"/>
-    <img *ngIf="tipo=='armadura'" class="icono" src="./assets/Iconos/Icono-Armadura.png"/>
-    <img *ngIf="tipo=='vitalidad'" class="icono" src="./assets/Iconos/Icono-Vitalidad.png"/>
-    <img *ngIf="tipo=='oro'" class="icono" src="./assets/Iconos/Icono-Moneda.png"/>
-    <img *ngIf="tipo=='alcance'" style="filter: invert(1)" class="icono" src="./assets/Iconos/alcance.png"/>
-    <img *ngIf="tipo=='cooldown'" style="filter: invert(1)" class="icono" src="./assets/Iconos/cooldown.png"/>
-    <img *ngIf="tipo=='aoe'" style="filter: invert(1)" class="icono" src="./assets/Iconos/aoe.png"/>
-    <img *ngIf="tipo=='dado'" style="filter: invert(1)" class="icono" src="./assets/Iconos/dado.png"/>
-    <img *ngIf="tipo=='ver'" style="filter: invert(1)" class="icono" src="./assets/Iconos/visibilidad.png"/>
-    <img *ngIf="tipo=='critico'" class="icono" src="./assets/Iconos/critico.png"/>
-    <div class="frameAtributo"></div>
+  <div class="valor Texto1">{{valor}}</div>
+  @if (tipo=='movimiento') {
+    <img class="icono" src="./assets/Iconos/Icono-Movimiento.png"/>
+  }
+  @if (tipo=='energia') {
+    <img class="icono" src="./assets/Iconos/Icono-Energia-Stat.png"/>
+  }
+  @if (tipo=='ap') {
+    <img class="icono" src="./assets/Iconos/Icono-Dano-Magico.png"/>
+  }
+  @if (tipo=='ad') {
+    <img class="icono" src="./assets/Iconos/Icono-Dano-Fisico.png"/>
+  }
+  @if (tipo=='armadura') {
+    <img class="icono" src="./assets/Iconos/Icono-Armadura.png"/>
+  }
+  @if (tipo=='vitalidad') {
+    <img class="icono" src="./assets/Iconos/Icono-Vitalidad.png"/>
+  }
+  @if (tipo=='oro') {
+    <img class="icono" src="./assets/Iconos/Icono-Moneda.png"/>
+  }
+  @if (tipo=='alcance') {
+    <img style="filter: invert(1)" class="icono" src="./assets/Iconos/alcance.png"/>
+  }
+  @if (tipo=='cooldown') {
+    <img style="filter: invert(1)" class="icono" src="./assets/Iconos/cooldown.png"/>
+  }
+  @if (tipo=='aoe') {
+    <img style="filter: invert(1)" class="icono" src="./assets/Iconos/aoe.png"/>
+  }
+  @if (tipo=='dado') {
+    <img style="filter: invert(1)" class="icono" src="./assets/Iconos/dado.png"/>
+  }
+  @if (tipo=='ver') {
+    <img style="filter: invert(1)" class="icono" src="./assets/Iconos/visibilidad.png"/>
+  }
+  @if (tipo=='critico') {
+    <img class="icono" src="./assets/Iconos/critico.png"/>
+  }
+  <div class="frameAtributo"></div>
 </div>
