--- a/src/app/comun/desarrollador/triggerComponent/trigger.component.html
+++ b/src/app/comun/desarrollador/triggerComponent/trigger.component.html
@@ -5,72 +5,69 @@
 
 <div class= "contenedor">
 
-    <h1 class="title Texto2">Gestión Triggers</h1>
-    <img class="botonEliminar" *ngIf="triggers.length!=0" src="./assets/desarrollador/papelera.svg" (click)="eliminarTrigger()"/>
+  <h1 class="title Texto2">Gestión Triggers</h1>
+  @if (triggers.length!=0) {
+    <img class="botonEliminar" src="./assets/desarrollador/papelera.svg" (click)="eliminarTrigger()"/>
+  }
 
-        <!-- LISTA HECHIZOS -->
-        <div class="contenedorListaTriggers">
-            <panelSelectorComponent 
-                [tipo]="'Triggers'"
-                [titulo]="'Triggers'"
-                [botonAdd]="true"
-                [lateral]="'libre'"
-                [datos]= "triggers"
-                [botonEliminarRelacion]="false"
-                (selector)="seleccionarTrigger($event)"
-                (addElementoEmitter)="addTrigger()"
-                >
-            </panelSelectorComponent>
-        </div>
+  <!-- LISTA HECHIZOS -->
+  <div class="contenedorListaTriggers">
+    <panelSelectorComponent
+      [tipo]="'Triggers'"
+      [titulo]="'Triggers'"
+      [botonAdd]="true"
+      [lateral]="'libre'"
+      [datos]= "triggers"
+      [botonEliminarRelacion]="false"
+      (selector)="seleccionarTrigger($event)"
+      (addElementoEmitter)="addTrigger()"
+      >
+    </panelSelectorComponent>
+  </div>
 
-    <mat-stepper *ngIf="triggerActivo" class="mat-app-background darkMode triggerStepper" orientation="vertical" [linear]="false" #stepper>
-
+  @if (triggerActivo) {
+    <mat-stepper class="mat-app-background darkMode triggerStepper" orientation="vertical" [linear]="false" #stepper>
       <mat-step [stepControl]="formActivador">
         <form [formGroup]="formActivador">
           <ng-template matStepLabel>Activador</ng-template>
-            <div class="contenedorDual">
-              <mat-form-field class="campo">
-                <mat-label>Activador</mat-label>
-                <mat-select formControlName="activador">
-                    <mat-option value="entrarCasilla">Entrar Casilla</mat-option>
-                    <mat-option value="cambioVariable">Cambio Variable</mat-option>
-                    <mat-option value="enemigoEliminado">Enemigo Eliminado</mat-option>
-                    <mat-option value="subirNivel">subirNivel</mat-option>
-                    <mat-option value="iniciarMazmorra">Inicial Mazmorra</mat-option>
-                    <mat-option value="finalizarMazmorra">Finalizar Mazmorra</mat-option>
-                    <mat-option value="completarMision">Completar Misión</mat-option>
-                    <mat-option value="pasoTurno">pasoTurno</mat-option>
-                    <mat-option value="lanzarHechizo">Lanzar Hechizo</mat-option>
-                    <mat-option value="movimiento">Movimiento</mat-option>
-                </mat-select>
-              </mat-form-field>
-
-              <mat-form-field class="campo" appearance="fill">
-                <mat-label>Identificador</mat-label>
-                <input matInput formControlName="identificador" required>
-              </mat-form-field>
-            </div>
+          <div class="contenedorDual">
+            <mat-form-field class="campo">
+              <mat-label>Activador</mat-label>
+              <mat-select formControlName="activador">
+                <mat-option value="entrarCasilla">Entrar Casilla</mat-option>
+                <mat-option value="cambioVariable">Cambio Variable</mat-option>
+                <mat-option value="enemigoEliminado">Enemigo Eliminado</mat-option>
+                <mat-option value="subirNivel">subirNivel</mat-option>
+                <mat-option value="iniciarMazmorra">Inicial Mazmorra</mat-option>
+                <mat-option value="finalizarMazmorra">Finalizar Mazmorra</mat-option>
+                <mat-option value="completarMision">Completar Misión</mat-option>
+                <mat-option value="pasoTurno">pasoTurno</mat-option>
+                <mat-option value="lanzarHechizo">Lanzar Hechizo</mat-option>
+                <mat-option value="movimiento">Movimiento</mat-option>
+              </mat-select>
+            </mat-form-field>
+            <mat-form-field class="campo" appearance="fill">
+              <mat-label>Identificador</mat-label>
+              <input matInput formControlName="identificador" required>
+            </mat-form-field>
+          </div>
         </form>
       </mat-step>
-
       <!-- CONDICIÓN INICIAL -->
       <mat-step [stepControl]="formCondicionInicial">
         <form [formGroup]="formCondicionInicial">
-            <ng-template matStepLabel>Condición Inicial</ng-template>
-
-            <div class="campoCheckBox">
-                <mat-checkbox  formControlName="activado">Activado</mat-checkbox>
-            </div>
-
-            <div class="contenedorOperacion">
+          <ng-template matStepLabel>Condición Inicial</ng-template>
+          <div class="campoCheckBox">
+            <mat-checkbox  formControlName="activado">Activado</mat-checkbox>
+          </div>
+          <div class="contenedorOperacion">
             <mat-form-field class="campo" appearance="fill">
-                <mat-label>Variable</mat-label>
-                <input matInput formControlName="variable" [required]="activado">
+              <mat-label>Variable</mat-label>
+              <input matInput formControlName="variable" [required]="activado">
             </mat-form-field>
-
             <mat-form-field class="campo">
-                <mat-label>Operador</mat-label>
-                <mat-select formControlName="operador">
+              <mat-label>Operador</mat-label>
+              <mat-select formControlName="operador">
                     <mat-option value="==">=</mat-option>
                     <mat-option value="!=">!=</mat-option>
                     <mat-option value="menor">Menor</mat-option>
@@ -235,6 +232,7 @@
         </form>
       </mat-step>
     </mat-stepper>
+}
     
     <botonComponent mat-button [mat-dialog-close] [texto]="'Guardar'" [tipoBoton]="2" [color]="'verde'" class="botonUnico botonGuardar" (click)="guardarTrigger()"></botonComponent>
 	<botonComponent mat-button [mat-dialog-close] [texto]="'Cancelar'" [tipoBoton]="2" [color]="'rojo'" class="botonUnico botonCancelar" (click)="cancelarTrigger()"></botonComponent>
