--- a/src/app/comun/index/index.component.html
+++ b/src/app/comun/index/index.component.html
@@ -19,38 +19,48 @@
 
 
   <div class="contenedorInicioSesion borde1 sombra">
-	  <div class="Texto1 bloque textoIniciarSesion">Iniciar sesión</div>
-	  <hr class="Texto2 bloque separador">
+    <div class="Texto1 bloque textoIniciarSesion">Iniciar sesión</div>
+    <hr class="Texto2 bloque separador">
 
-      <form class="wrapperInterior" [formGroup]="formLogin">
-          <div *ngIf="!procesando" class="wrapperCampo">
-            <div class="Texto2 bloque texto">Usuario:</div>
-            <div class="Texto2 bloque input">
-              <input matInput formControlName="usuario" #usuario (keyup.enter)="focusPassword()" type="text" class="Texto2"/>
-            </div>
+    <form class="wrapperInterior" [formGroup]="formLogin">
+      @if (!procesando) {
+        <div class="wrapperCampo">
+          <div class="Texto2 bloque texto">Usuario:</div>
+          <div class="Texto2 bloque input">
+            <input matInput formControlName="usuario" #usuario (keyup.enter)="focusPassword()" type="text" class="Texto2"/>
           </div>
+        </div>
+      }
 
-          <div *ngIf="!procesando" class="wrapperCampo">
-              <div class="Texto2 bloque texto">Contraseña:</div>
-              <div class="Texto2 bloque input">
-                  <input matInput formControlName="password" (keyup.enter)="checkClave()" #clave type="password" class="Texto2"/>
-              </div>
+      @if (!procesando) {
+        <div class="wrapperCampo">
+          <div class="Texto2 bloque texto">Contraseña:</div>
+          <div class="Texto2 bloque input">
+            <input matInput formControlName="password" (keyup.enter)="checkClave()" #clave type="password" class="Texto2"/>
           </div>
+        </div>
+      }
 
-          <div *ngIf="!procesando" class="wrapperCampo wrapperBoton">
-            <botonComponent *ngIf="!procesando" class="contenedorBoton" [tipoBoton]="2" [color]="'violeta'" [texto]="'Iniciar'" (click)="checkClave();"></botonComponent>
-          </div>
-          <div *ngIf="procesando" class="lds-dual-ring"></div>
-      </form>
+      @if (!procesando) {
+        <div class="wrapperCampo wrapperBoton">
+          @if (!procesando) {
+            <botonComponent class="contenedorBoton" [tipoBoton]="2" [color]="'violeta'" [texto]="'Iniciar'" (click)="checkClave();"></botonComponent>
+          }
+        </div>
+      }
+      @if (procesando) {
+        <div class="lds-dual-ring"></div>
+      }
+    </form>
   </div>
 
   <!--
   <div id="botonCrearCuenta" class="Texto2" (click)="mostrarCrearCuenta()">
-	Crear Cuenta
+    Crear Cuenta
   </div>
   -->
 
- </div>
+</div>
 
 
 
