--- a/src/app/comun/rng/rng.component.html
+++ b/src/app/comun/rng/rng.component.html
@@ -2,20 +2,22 @@
 
 
 <div>
-	<div *ngIf="rngService.mostrarRng" id="contenedorRNGmovil">
-		<div class="tituloRNG"> Tirada de potenciación: {{appService.dispositivo}}</div>
-		<div class="contenedorDigitos">
-			<div class="digito Texto1" (click)="rngService.lanzarRng(1)">1</div>
-			<div class="digito Texto1" (click)="rngService.lanzarRng(2)">2</div>
-			<div class="digito Texto1" (click)="rngService.lanzarRng(3)">3</div>
-			<div class="digito Texto1" (click)="rngService.lanzarRng(4)">4</div>
-			<div class="digito Texto1" (click)="rngService.lanzarRng(5)">5</div>
-			<div class="digito Texto1" (click)="rngService.lanzarRng(6)">6</div>
-		</div>
-	</div>
+  @if (rngService.mostrarRng) {
+    <div id="contenedorRNGmovil">
+      <div class="tituloRNG"> Tirada de potenciación: {{appService.dispositivo}}</div>
+      <div class="contenedorDigitos">
+        <div class="digito Texto1" (click)="rngService.lanzarRng(1)">1</div>
+        <div class="digito Texto1" (click)="rngService.lanzarRng(2)">2</div>
+        <div class="digito Texto1" (click)="rngService.lanzarRng(3)">3</div>
+        <div class="digito Texto1" (click)="rngService.lanzarRng(4)">4</div>
+        <div class="digito Texto1" (click)="rngService.lanzarRng(5)">5</div>
+        <div class="digito Texto1" (click)="rngService.lanzarRng(6)">6</div>
+      </div>
+    </div>
+  }
 </div>
 
 
-	
- 
+
+
 
